--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 appdirs==1.4.3
 bleach==2.0.0
+boto==2.48.0
+bz2file==0.98
+certifi==2017.7.27.1
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.0.11
 entrypoints==0.2.2
+gensim==2.3.0
 html5lib==0.999999999
+idna==2.5
 ipykernel==4.6.1
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -21,6 +27,7 @@ matplotlib==2.0.2
 mistune==0.7.4
 nbconvert==5.1.1
 nbformat==4.3.0
+nltk==3.2.4
 notebook==5.0.0
 numpy==1.13.0
 packaging==16.8
@@ -39,12 +46,14 @@ pytz==2017.2
 PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
+requests==2.18.3
 scikit-learn==0.18.1
 scipy==0.19.0
 seaborn==0.7.1
 simplegeneric==0.8.1
 six==1.10.0
 sklearn==0.0
+smart-open==1.5.3
 tensorflow==1.0.0
 tensorflow-gpu==1.1.0
 terminado==0.6
@@ -52,6 +61,7 @@ testpath==0.3
 Theano==0.9.0
 tornado==4.5.1
 traitlets==4.3.2
+urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.12.2
